# cilib

./: CMakeLists.txt  Jenkinsfile  Jenkinslibrary.groovy  README.md  ci_enabled.list  jenkinsfile
aurora/: CMakeLists.txt  aurora.conf.in  aurora.sh.in  aurora_build.sh.in  aurora_infra_settings.conf.in  aurora_load.sh.in  aurora_networking_plumgrid.sh.in  aurora_preempt_count.sh.in  aurora_run.sh.in  aurora_run_preemptible.sh.in  aurora_utils.sh.in  cleanup.sh.in  gc_helpers.sh.in  help.sh.in  write_gitsync.sh.in
aurora/init_scripts/: CMakeLists.txt  alps_build.sh.in  apex_build.sh.in  coral_build.sh.in  corelib_build.sh.in  falcon_build.sh.in  nirvana_build.sh.in  run_automaton_init.sh.in  run_automaton_init_with_sigmund.sh.in  run_build_all.sh.in  run_middleearth_init.sh.in
aurora/nimbus/: CMakeLists.txt  nimbus.in  nimbus_remote_conf.in  nimbus_setup_log_infra.sh.in
aurora/pipeline_scripts/: CMakeLists.txt  flag_failing_tests.sh.in  flag_passing_tests.sh.in  gen_automaton_tests.sh.in  gen_pgui_tests.sh.in  gen_test_scripts.sh.in  gen_user_tests.sh.in  hunt_culprit.sh.in  pl_help.sh.in  pl_settings.conf.in  pl_utils.sh.in  run_pipelines.sh.in
aurora/pipeline_scripts/alps/: CMakeLists.txt  alps_run_pipelines.sh.in  base_test.sh.in  build_db.sh.in  extended_base_test.sh.in  flag_failing_tests.sh.in  gen_automaton_tests.sh.in  gen_test_scripts.sh.in  gen_user_tests.sh.in  hunt_culprit.sh.in  nightly_base_test.sh.in  pgui_base_test.sh.in  pl_help.sh.in  pl_settings.conf.in  pl_utils.sh.in  run_pipelines.sh.in  smoke_base_test.sh.in
aurora/pipeline_scripts/alps/dbs/: CMakeLists.txt  alps.extended.db  alps.nightly.db  alps.smoke.db  alps.unstable.db  extended-master.db  extended-stable_4_0.db  extended-stable_4_1.db  extended-stable_5_0.db  omni-master.db  omni-stable_4_0.db  omni-stable_4_1.db  omni.db  pgui-extended-master.db  pgui-extended-stable_4_0.db  pgui-extended-stable_4_1.db  pgui-smoke-master.db  pgui-smoke-stable_4_0.db  pgui-smoke-stable_4_1.db  pgui.smoke.db  smoke-master.db  smoke-stable_4_0.db  smoke-stable_4_1.db  unstable-master.db  unstable-stable_4_0.db  unstable-stable_4_1.db
aurora/pipeline_scripts/coral/: base_test.sh.in  coral_run_pipelines.sh.in
aurora/pipeline_scripts/corelib/: CMakeLists.txt  base_test.sh.in  corelib_run_pipelines.sh.in
aurora/pipeline_scripts/corelib/dbs/: CMakeLists.txt  corelib-extended-master.db
aurora/pipeline_scripts/nirvana/: CMakeLists.txt  nirvana_run_pipelines.sh.in
aurora/pipeline_scripts/nirvana/dbs/: nirvana-master.db
aurora/sample_scripts/: ExtensiveHALongevityTest01.sh  ExtensiveHALongevityTest02.sh  ExtensiveHALongevityTest03.sh  ExtensiveHALongevityTest04.sh  ExtensiveHALongevityTest05.sh  ExtensiveHATest01.sh  ExtensiveHATest02.sh  ExtensiveHATest03.sh
aurora/test/: CMakeLists.txt  test_aurora_build.sh.in  test_aurora_debugtest.sh.in  test_aurora_pipeline.sh.in  test_aurora_run.sh.in
aurora/test_scripts/: ExtensiveHALongevityTest01.sh  ExtensiveHALongevityTest02.sh
aurora/test_scripts/alps/: analyze_results.sh  expand_run_test.sh  run_tests.nightly.sh  run_tests.sh
cloud-image-builder/: CMakeLists.txt  build_base_docker_vm_snapshot.sh  build_base_vm_snapshot.sh  build_primary_vm_snapshot.sh.in  email_user_instance.sh  new_build  new_build.sh
cloud-image-builder/vm_files/: 90-cloudimg-plumgrid  git_update.sh  run_build_all.sh  ubuntu-lxc-stable-precise.list  vm_checkout_branch.sh  vm_setup_all.sh  vm_setup_base.sh  vm_setup_ccache.sh  vm_setup_preinit.sh  vm_setup_tools.sh
cost_calculation/: aurora_cost.sh.in  cost_utils.sh.in
cron_jobs/: build_foster_snapshot.sh  build_primary_snapshot.sh  get_daily_cost.sh  get_gcloud_cost_report.sh  get_pl_cost_reports.sh  get_updated_dbs.sh  jenkins_entity_cleanup.sh  outdated_entities_email.sh  qouta_alarm.sh  remove_old_snapshots.sh
gcloud/: CMakeLists.txt
gcloud/aurora/: aurora.sh.in  aurora_build.sh.in  aurora_infra_settings.conf.in  aurora_load.sh.in  aurora_preempt_count.sh.in  help.sh.in
gcloud/aurora/init_scripts/: alps_build.sh.in  corelib_build.sh.in  run_automaton_init.sh.in  run_automaton_init_with_sigmund.sh.in  run_middleearth_init.sh.in
gcloud/aurora/nimbus/: CMakeLists.txt  nimbus_remote_conf.in
gcloud/aurora/pipeline_scripts/: build_db.sh.in  flag_failing_tests.sh.in  gen_pgui_tests.sh.in  hunt_culprit.sh.in  pl_settings.conf.in  pl_utils.sh.in
gcloud/aurora/pipeline_scripts/alps/dbs/: CMakeLists.txt  omni-master.db  omni-stable_5_0.db  pgui-smoke-master.db  smoke-master.db  unstable-master.db
gcloud/aurora/pipeline_scripts/coral/: CMakeLists.txt  coral_run_pipelines.sh.in
gcloud/aurora/pipeline_scripts/corelib/: base_test.sh.in  corelib_run_pipelines.sh.in
gcloud/aurora/pipeline_scripts/corelib/dbs/: CMakeLists.txt  corelib-smoke-master.db
gcloud/aurora/pipeline_scripts/nirvana/: CMakeLists.txt  base_test.sh.in  nirvana_run_pipelines.sh.in
gcloud/aurora/pipeline_scripts/nirvana/dbs/: CMakeLists.txt
gcloud/aurora/sample_scripts/: ExtensiveHALongevityTest01.sh  ExtensiveHALongevityTest03.sh  ExtensiveHALongevityTest04.sh  ExtensiveHALongevityTest05.sh  ExtensiveHATest02.sh  ExtensiveHATest03.sh
gcloud/aurora/test/: CMakeLists.txt  test_aurora_build.sh.in  test_aurora_debugtest.sh.in  test_aurora_falcon.sh.in  test_aurora_run.sh.in
gcloud/cloud-image-builder/: CMakeLists.txt  build_foster_vm_snapshot.sh.in
gcloud/cloud-image-builder/vm_files/: sources.list  ssh_config  vm_setup_preinit.sh  vm_setup_tools.sh
gcloud/cost_calculation/: CMakeLists.txt
gcloud/cron_jobs/: build_primary_snapshot.sh  get_updated_dbs.sh  jenkins_entity_cleanup.sh  outdated_entities_email.sh
gcloud/scripts/: gc_helper.sh  topo_helper.sh
scripts/: cn-setup.sh  copy_cn_node_to_lcm.sh  post_license.sh  rest_helper.sh
seed/: master_seedjob.groovy  seedjob.groovy
src/utils/: GetPropertyList.groovy  JenkinsLibrary.groovy  SetJobProperties.groovy
utilities/: CMakeLists.txt  update_db.sh.in
vars/: aurora.groovy  clone.groovy  external.groovy
